--- a/nablapps/events/templates/events/event_detail.html
+++ b/nablapps/events/templates/events/event_detail.html
@@ -9,7 +9,7 @@
 
 <div class="box">
     {% if event.picture %}
-    <img alt="header" class="img-responsive"
+    <img alt="header" class="img-fluid"
          src="{% thumbnail event.picture 760x300 box=event.cropping upscale=True detail=True quality=95 %}">
     {% endif %}
 
