--- a/nablapps/image/templates/content/images/render.html
+++ b/nablapps/image/templates/content/images/render.html
@@ -2,7 +2,7 @@
 <div class="thumbnail {% if align %} pull-{{ align }}{% endif %}"
      style="width: {% if size == 'full' %}100%{% elif size == 'large' %}500px{% else %}350px{% endif %};max-width: 100%">
     <a href="{{ image.file.url }}">
-      <img class="img-responsive" src="{{ image.file.url }}" alt="{{ revision.get_filename }}" />
+      <img class="img-fluid" src="{{ image.file.url }}" alt="{{ revision.get_filename }}" />
     </a>
   <div class="caption">
     {{ caption|safe }}
