--- a/nablapps/podcast/templates/podcast/season.html
+++ b/nablapps/podcast/templates/podcast/season.html
@@ -14,7 +14,7 @@
         <h1>{{ season_name }}</h1>
         {% if season.banner %}
         <div class="">
-            <img class="img-responsive" src="{{ season.banner.url }}"/>
+            <img class="img-fluid" src="{{ season.banner.url }}"/>
         </div>
         {% endif %}
     {% endif %}
