--- a/nablapps/exchange/templates/exchange/ex_news_detail.html
+++ b/nablapps/exchange/templates/exchange/ex_news_detail.html
@@ -20,7 +20,7 @@
 
 <div class="box">
     {% if news.picture %}
-    <img alt="header" class="img-responsive" src="{% thumbnail news.picture 760x300 box=news.cropping upscale=True detail=True quality=95 %}">
+    <img alt="header" class="img-fluid" src="{% thumbnail news.picture 760x300 box=news.cropping upscale=True detail=True quality=95 %}">
     {% endif %}
 
     <header><h2>{{ news.headline }}</h2></header>
