--- a/templates/nablashop/index.html
+++ b/templates/nablashop/index.html
@@ -10,7 +10,7 @@
             <div class="col-xs-6 col-md-4">
                 <div class="thumbnail">
                     <a href="{% url 'nablashop:product_detail' product.id %}">
-                        <img class="img-responsive"  src="{% thumbnail product.photo 350x350 crop %}">
+                        <img class="img-fluid"  src="{% thumbnail product.photo 350x350 crop %}">
                     </a>
                     <div class="caption">
                         <p>{{ product.name }}</p>
