Fikset visning av nablad på forsiden

--- a/nablapps/jobs/templates/jobs/jobs_summary_include.html
+++ b/nablapps/jobs/templates/jobs/jobs_summary_include.html
@@ -3,7 +3,7 @@
 {% load jobs_filters %}
 {% load easy_thumbnails %}
 
-<div class="col-md-6 news_item advert card">
+<div class="col-md-6 news_item advert ">
     {% if job.company.picture %}
         <a href="{{ job.get_absolute_url }}">
             <img class="card-img-top"
