--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -9,7 +9,7 @@
 {% endaddtoblock %}
 
 <div class="main-container">
-    <header>
+    <header class="forum-header">
         <div>
             <h1>Nablaforum</h1>
         </div>
