--- a/templates/base.html
+++ b/templates/base.html
@@ -282,7 +282,7 @@
 
         <!-- Page Content -->
         {% block full-content-body %}
-
+        <!-- Hvis du ikke har med mainContent vil ikke footer alltid være på bunnen -->
         <div class="container" id = "mainContent">
 
             {% block main %}
