fikset slik at comments ikke ser rare ut

--- a/templates/comments/preview.html
+++ b/templates/comments/preview.html
@@ -25,8 +25,8 @@
     {% endfor %}
     {% else %}
 
-        <div class="row comment" id="c{{ comment.id }}">
-            <img class="col-xs-2 thumbnail img-fluid" alt="avatar" width="150" height="150" src=
+        <div class="row pl-4" id="c{{ comment.id }}">
+            <img class="col-xs-2 pr-2" alt="avatar" width="150" height="150" src=
                 {% if user.avatar %}
                     "{% thumbnail user.avatar 150x150 box=user.cropping %}"
                 {% else %}
