Centers navigation bar

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -31,6 +31,7 @@ html, body {
 }
 
 
+
 .logo {
 padding: 7px;
 }
@@ -43,6 +44,12 @@ nav.navbar {
     text-shadow: 0 1px 0 #000;
     color: #efefef;
     font-family: 'PT Sans', Helvetica, arial, sans-serif;
+}
+
+#navbar-center {
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card-body-overline{
