Revert "Centers navigation bar" This reverts commit d7d83dd5119d7a9cd192ff1f405597bb7e6d2473.
Den ble litt merkelig, så reverter denne.  Spesielt på mobil ble det overflow

--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@
             <div class="collapse navbar-collapse " id="nabla-navbar-collapse-1">
                 {% block navbar_container %}
                 {# navigasjonslenker #}
-                <ul class="navbar-nav mr-auto" id="navbar-center">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="{% url "event_main_page" %}">Arrangementer</a>
                     </li>
