--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -61,7 +61,7 @@
                 <div class="row text-center">
                     {% for nablad in new_nablad %}
                         <div class="col-md-3{% if not forloop.first %} d-none d-md-block {% endif %}">
-                            <a class="thumbnail" href="{{ nablad.get_absolute_url }}">
+                            <a  href="{{ nablad.get_absolute_url }}">
                                 <img class="rounded mw-100" src="{% thumbnail nablad.thumbnail 730x200 %}">
                             </a>
                         </div >
@@ -120,8 +120,8 @@
         <!--Siste Skråttcast-->
         {% if new_podcast %}
             <div height=300px>
-                <h3><a href="{{new_podcast.get_absolute_url }}">Siste Skråttcast</a></h3>
-                <a class="thumbnail" href="{{ new_podcast.get_absolute_url }}">
+                <h3><a href="{% url "season_view" %}">Siste Skråttcast</a></h3>
+                <a  href="{{ new_podcast.get_absolute_url }}">
                      <img class="rounded mw-100" src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}" style="max-width: 100%;"/>
                 </a>
             </div>
