--- a/templates/flatpages/englishCustom.html
+++ b/templates/flatpages/englishCustom.html
@@ -22,7 +22,7 @@
         {% endif %}
     {% endfor %}
 
-        <li class="nav-item" ><a class="nav-item" href="https://nabla.no/englishcom/">Subgroups of Nabla</a></li>
+        <li class="nav-item" ><a class="nav-link" href="https://nabla.no/englishcom/">Subgroups of Nabla</a></li>
 
     </ul>
 {% endblock %}
