fikset plassering av norsk flag

--- a/templates/flatpages/englishCom.html
+++ b/templates/flatpages/englishCom.html
@@ -8,9 +8,11 @@
 {% endblock %}
 
 {% block flag %}
-<li><a class="logo" href="/">
-    <img src="{% static "img/NOR_flag.png" %}" alt="Nor">
-</a></li>
+<li class="nav-item" >
+  <a class="navbar-brand" href="/">href="/">
+      <img src="{% static "img/NOR_flag.png" %}" alt="Nor">
+  </a>
+</li>
 {% endblock %}
 
 {% block content %}
