--- a/templates/flatpages/english.html
+++ b/templates/flatpages/english.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block flag %}
-                      <li><a class="logo" href="/">
-                        <img src="{% static "img/NOR_flag.png" %}" alt="Nor">
-                      </a></li>
+                      <li class="nav-item" >
+                          <a class="navbar-brand" href="/">
+                              <img src="{% static "img/NOR_flag.png" %}" alt="Nor">
+                          </a>
+                      </li>
 {% endblock %}
