La til link til BN sine sider i de endrede .html filene

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -96,11 +96,11 @@
         </p>
         <h4>Ny student?</h4>
         <p>
-            Les vår informasjon for nye studenter <a href="/nystudent/">her.</a>
+            Les vår informasjon for nye studenter <a href="/nystudent/">her</a>.
         </p>
         <h4>Bedrift?</h4>
         <p>
-            Ta kontakt med bedriftskontakten på <a href="mailto:bedkom@nabla.ntnu.no">bedkom@nabla.ntnu.no.</a>
+            Sjekk ut <a href="/bedriftskontakten/">bedriftskontakten sine sider</a>, eller ta kontakt med bedriftskontakten på <a href="mailto:bedkom@nabla.ntnu.no">bedkom@nabla.ntnu.no</a>.
         </p>
     </div>
     {% else %}
