--- a/nablapps/jobs/templates/jobs/sidebar_include.html
+++ b/nablapps/jobs/templates/jobs/sidebar_include.html
@@ -12,7 +12,7 @@
 
 <h3>Vil du ha stillingsannonsen din her?</h3>
 <p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:bedkom@nabla.ntnu.no">
-bedkom@nabla.ntnu.no.</a></p>
+bedkom@nabla.ntnu.no</a>. Les mer om bedriftskontakten <a href="/bedriftskontakten/">her</a>.</p>
 
 {% if jobsidebarinfo %}
     <p>
