fikset siste boostrap 3 til 4 navs

--- a/nablapps/com/templates/com/com_details.html
+++ b/nablapps/com/templates/com/com_details.html
@@ -54,16 +54,16 @@
 {% block sidebar %}
 
 <h3>Komiteer</h3>
-<ul class="nav nav-pills nav-stacked">
+<ul class="nav flex-column">
 {% for c in compages %}
     {% if not c.is_interest_group %}
-    <li class="card-title"><a href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
     {% endif %}
 {% endfor %}
 <h3>Interessegrupper</h3>
 {% for c in compages %}
     {% if c.is_interest_group %}
-    <li class="card-title"><a href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
     {% endif %}
 {% endfor %}
 </ul>
