la til resten av front page i card

--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -9,8 +9,8 @@
         "more-news-1     more-news-2     poll"
         "more-news-3     more-news-4     latest-podcast"
         "more-news-btn   more-news-btn   ."
-        "latest-nablad   latest-nablad   suggestions"
-        "sponsors        sponsors        sponsors";
+        "latest-nablad   latest-nablad   latest-nablad"
+        "sponsors        sponsors        suggestions";
 }
 .maingrid-container-authenticated{
     display: grid;
@@ -23,8 +23,8 @@
         "more-news-1     more-news-2     poll"
         "more-news-3     more-news-4     latest-podcast"
         "more-news-btn   more-news-btn   ."
-        "latest-nablad   latest-nablad   suggestions"
-        "sponsors        sponsors        sponsors";
+        "latest-nablad   latest-nablad   latest-nablad"
+        "sponsors        sponsors        suggestions";
 }
 
 @media (max-width: 1000px){
