--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -74,7 +74,7 @@
         {% endif %}
     </div>
 
-    <div class="sponsors">
+    <div class="sponsors card card-body card-body-overline">
         <!--Sponsorer-->
         {% if frontpageinfo %}
             <p>
@@ -116,7 +116,7 @@
         {% include "poll/poll_include.html" %}
     </div>
 
-    <div class="latest-podcast card card-body card-body-overline bg-light ">
+    <div class="latest-podcast card card-body card-body-overline ">
         <!--Siste Skråttcast-->
         {% if new_podcast %}
             <div height=300px>
@@ -131,7 +131,7 @@
         {% endif %}
     </div>
 
-    <div class="suggestions">
+    <div class="suggestions card card-body card-body-overline">
         <!--Send inn ellernoe?-->
         {% if sidebarinfo %}
             <p>
