--- a/nablapps/nablaforum/static/nablaforum/forum.css
+++ b/nablapps/nablaforum/static/nablaforum/forum.css
@@ -1,20 +1,38 @@
 .main-container {
     height: 900px;
-    background-color: #f0f0f0;
-    padding: 50px 20px 100px 20px;
+    background-color: #f7f7f7;
+    padding: 0px 0px 120px 0px;
 }
 
 .forum-header{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 4fr 2fr;
     grid-gap: 20px;
+}
+
+.channel-menu-header {
+    background-color: white;
+    padding-left: 20px;
+    border-right: solid;
+    border-color: gray;
+    min-width: 230px;
+}
+
+.thread-menu-header {
+    border-bottom: solid;
+    border-color: gray;
+}
+
+.messages-header {
+    border-bottom: solid;
+    border-color: gray;
 }
 
 .main-grid{
     height: 100%;
     padding-bottom: 000px;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 4fr 2fr;
     grid-gap: 20px;
     grid-template-areas:
     "chahnnel-menu channel-threads thread-messages"
@@ -25,10 +43,18 @@
      overflow: auto;
 }
 
+.channel-menu {
+    background-color: white;
+    padding-left: 20px;
+    border-right: solid;
+    border-color: gray;
+    min-width: 230px;
+}
+
 .tile{
     border-radius: 10px;
     padding-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 20px;
     margin-right: 20px;
     margin-bottom: 10px;
