--- a/nablapps/nablaforum/templates/nablaforum/includes/forum_widget.html
+++ b/nablapps/nablaforum/templates/nablaforum/includes/forum_widget.html
@@ -3,7 +3,8 @@
     <h4>Siste fra Nablafeed</h4>
     {% for message in latest_feed %}
     <p>
-    <a href="{% url "forum-main" channel_id=message.channel.id thread_id=message.id %}?page=1">
+    <a href="{% url "forum-main" channel_id=message.channel.id thread_id=message.id %}?page=1"
+        style="color: black">
         {{ message }}
     </a>
     </p>
@@ -12,7 +13,8 @@
     <h4>Siste fra {{ fysmat_class }}</h4>
     {% for message in latest_class %}
     <p>
-    <a href="{% url "forum-main" channel_id=message.channel.id thread_id=message.id %}?page=1">
+    <a href="{% url "forum-main" channel_id=message.channel.id thread_id=message.id %}?page=1"
+        style="color: black">
         {{ message }}
     </a>
     </p>
