--- a/nablapps/exchange/templates/exchange/exchange_news.html
+++ b/nablapps/exchange/templates/exchange/exchange_news.html
@@ -39,27 +39,8 @@
         {% endfor %}
 </div>
 
-{% if is_paginated %}
-<nav>
-    <ul class="pagination">
-        {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}"><span aria-hidden="true">&larr;</span> Eldre</a>
-            </li>
-        {% endif %}
+{% include "includes/pagination.html" %}
 
-        <li class="disabled page-item pager-counter">
-            <a class="page-link" Side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }} ></a>
-        </li>
-
-        {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Nyere <span aria-hidden="true">&rarr;</span></a>
-            </li>
-        {% endif %}
-    </ul>
-</nav>  
-{% endif %}
 
 {% endblock content %}
 
@@ -70,7 +51,7 @@
     <ul>
         <li><a href="{{ ex_frontpage_url }}">Tilbake til forside for utveksling</a> </li>
         <li><a href="{{ ex_list_url }}">Liste over universiteter</a> </li>
-    </ul">
+    </ul>
 </div>
 
 <div class="col-md-12 box sidebar_box">
