--- a/nablapps/interactive/templates/interactive/quiz_list.html
+++ b/nablapps/interactive/templates/interactive/quiz_list.html
@@ -27,27 +27,8 @@ Ingen quiz her enda.
 {% endfor %}
 </ul>
 
-{% if is_paginated %}
-<nav>
-    <ul class="pagination">
-        {% if page_obj.has_next %}
-        <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}"><span aria-hidden="true">&larr;</span> Eldre</a>
-        </li>
-        {% endif %}
+{% include "includes/pagination.html" %}
 
-        <li class="disabled page-item pager-counter">
-            <a class="page-link"> Side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}</a>
-        </li>
-
-        {% if page_obj.has_previous %}
-        <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Nyere <span aria-hidden="true">&rarr;</span></a>
-        </li>
-        {% endif %}
-    </ul>
-</nav>
-{% endif %}
 
 {% endblock %}
 {% block sidebar %}
