--- a/nablapps/news/templates/news/news_list.html
+++ b/nablapps/news/templates/news/news_list.html
@@ -53,28 +53,8 @@
 
 <div class="news-list">
 {% for news in news_list %}
-{% include "includes/article_widget.html" with number=forloop.counter%}
+{% include "includes/article_widget.html" with number=forloop.counter margin="mb-3"%}
 {% endfor %}
 </div>
-{% if is_paginated %}
-<nav>
-    <ul class="pagination d-flex justify-content-between">
-        {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}"><span aria-hidden="true">&larr;</span> Eldre</a>
-            </li>
-        {% endif %}
-
-        <li class="disabled page-item pager-counter">
-            <a class="page-link"> Side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}</a>
-        </li>
-
-        {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Nyere <span aria-hidden="true">&rarr;</span></a>
-            </li>
-        {% endif %}
-    </ul>
-</nav>
-{% endif %}
+{% include "includes/pagination.html" %}
 {% endblock main %}
