--- a/templates/includes/article_widget.html
+++ b/templates/includes/article_widget.html
@@ -21,7 +21,7 @@
 {#    <p>{{ news.lead_paragraph}}</p>#}
 {#</div>#}
 
-<div class="card  news more-news-{{ number }} {{ margin|default:"mb-2" }}">
+<div class="card news more-news-{{ number|default:"mb-2" }} {{ margin|default:"mb-2" }}">
  {% if news.cropping and news.picture %}
         <img alt=""
              class="card-img-top"
