--- a/templates/includes/event_widget.html
+++ b/templates/includes/event_widget.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-        <h3> <a href="{% url 'event_main_page' %}">Arrangement</a> </h3>
+        <h3> <a href="{% url 'event_main_page' %}">Arrangementer</a> </h3>
         {% include "includes/upcoming_events.html" with upcoming=upcoming_events class="c-event" %}
     </div>
     <div class="col-md-6">
