Makes frontpage able to display messages again.
Not sure why or when it stopped being able to do this

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -15,6 +15,17 @@
     <link  rel="stylesheet" href="{% static "css/front_page.css" %}">
 {% endaddtoblock %}
 
+{% if messages %}
+<ul class="messages" style="list-style-type: none; padding: unset">
+    {% for message in messages %}
+    <li{% if message.tags %} class="alert alert-{{ message.tags }} alert-dismissable"{% endif %}>
+        {{ message }}
+        <p class="close" data-dismiss="alert" style="cursor: pointer;">X</p>
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 <div class="maingrid-container{% if not newuser_message %}-authenticated{% endif  %}"><!--main grid container open tag-->
 <!--main content begin-->
 
