Moves inline css for messages to stylesheet (default.css)

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -418,3 +418,16 @@ Overflow-x: hidden;
 .nounderline{
     text-decoration: none !important
 }
+
+/* Messages */
+.messages {
+    list-style-type: none;
+    padding: unset;
+}
+
+.close {
+    cursor: pointer;
+}
+
+
+
