--- a/nablapps/events/templates/events/event_detail.html
+++ b/nablapps/events/templates/events/event_detail.html
@@ -26,7 +26,7 @@
     <div class="registrations">
         {% for registration in event.eventregistration_set.all %}
         {% with user=registration.user %}
-        <span class="label label-default
+        <span class="badge {% ifequal user request.user %} badge-info {% else %} badge-secondary {% endifequal %}
                      {% if registration.waiting %} 
                      waiting-place
                      {% endif %}" style="display: inline-block;">
