Adds bootstrap_messages again

--- a/templates/base.html
+++ b/templates/base.html
@@ -285,6 +285,7 @@
         <!-- Hvis du ikke har med mainContent vil ikke footer alltid være på bunnen -->
         <div class="container" id = "mainContent">
 
+            {% bootstrap_messages %}
             {% block main %}
             <div class="row">
                 <!-- Blog Entries Column -->
